--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
     "moment": "^2.29.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-infinite-scroll-component": "^6.1.0",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
     "react-sweet-state": "^2.5.2",
     "sass": "^1.49.7",
+    "styled-components": "^5.3.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
